# codereg

./: .aicli_conversation.json  .gitignore  QUICKSTART.md  README.md  TROUBLESHOOTING.md  setup.py  test_persistence.py
health-calculator/: IMPLEMENTATION_SUMMARY.md  README.md  final_verification.txt  main.py  pyproject.toml  test_api.py
health-calculator/frontend/: index.html
mass-calculator/: README.md  main.py
src/aicli/: __init__.py  agent.py  main.py  ollama_client.py  tools.py
